# Wii-U-Code-Compilation

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  code_compilation_dbg.elf  main.c  main.cpp
src/: definitions.h  entry.c  enumerations.h  internal_templates.h  library_functions.h  link.ld  pointer_utilties.h  templates.h  utilities.h
src/implementation/: templates.hpp
src/implementation/examples/: mario_kart_8.hpp
src/implementation/internal/: internal_templates.hpp  library_functions.hpp  pointer_utilties.hpp
